--- a/configs/_checkpoints/mas/hf_llama_3_1.yaml
+++ b/configs/_checkpoints/mas/hf_llama_3_1.yaml
@@ -5,11 +5,14 @@ trainer:
    save:
     interval: -1
     path: null
-    model_checkpoint_filename: null
-    training_state_filename: null
+    model_checkpoint_filename: __model_checkpoint_filename.pt
+    training_state_filename: __training_state_filename.pt
 
    load:
     type: huggingface
+    # path: "meta-llama/Llama-3.2-1B"
     path: "/home/mstefaniak/checkpoints/llama_1b" # entropy # TODO move to shared
     # path: "/net/scratch/hscra/plgrid/plgmstefaniak/checkpoints/llama_1b" # helios # TODO move to shared
-    model_checkpoint_filename: null
+    model_checkpoint_filename: __model_checkpoint_filename.pt
+    training_state_filename: null
+
