--- a/configs/fine_tune_llama3_1_hf.yaml
+++ b/configs/fine_tune_llama3_1_hf.yaml
@@ -18,10 +18,16 @@ trainer:
   learning_rate: 3.0517578125e-05
   gradient_accumulation_steps: 8
 
+  scheduler:
+    _partial_: true
+    _target_: src.core.schedulers.get_cosine_scheduler_with_warmup
+    final_lr_fraction: 0.01
+    warmup_steps: 40
+
   checkpoint:
    save:
-    path: null
-    # path: /storage_nvme_3/mstefaniak/nano_checkpoints/llaama3_1_nano
+    # path: null
+    path: /storage_nvme_3/mstefaniak/nano_checkpoints/llama3
 
   train_dataloader:
     num_workers: 12
