--- a/configs/llm-random.yaml
+++ b/configs/llm-random.yaml
@@ -188,6 +188,7 @@ apply_functions:
     _partial_: true
     dmodel: ${common.dmodel}
     dff: ${common.dff}
+    projection_init: true
 
 infrastructure:
   slurm:
