--- a/configs/_checkpoints/mas/llama3_from_nano_to_hf.yaml
+++ b/configs/_checkpoints/mas/llama3_from_nano_to_hf.yaml
@@ -13,4 +13,5 @@ trainer:
     type: nano
     path: ???
     model_checkpoint_filename: __model_checkpoint_filename.pt
-    training_state_filename: __training_state_filename.pt
+    training_state_filename: null
+    only_weights: true 
