--- a/configs/_checkpoints/none.yaml
+++ b/configs/_checkpoints/none.yaml
@@ -1,13 +1,15 @@
 trainer:
   checkpoint:
    save:
+    type: nano
     interval: -1
     path: null
     model_checkpoint_filename: __model_checkpoint_filename.pt
     training_state_filename: __training_state_filename.pt
 
    load:
-    type: null
+    type: nano
     path: null
     model_checkpoint_filename: __model_checkpoint_filename.pt
-    training_state_filename: __training_state_filename.pt
+    training_state_filename: null # not tested
+    only_weights: true # false not tested
