--- a/configs/_trainer/llama.yaml
+++ b/configs/_trainer/llama.yaml
@@ -6,15 +6,14 @@ trainer:
   n_eval_steps: 10 
   gradient_accumulation_steps: 1
   gradient_clipping: 1.0
-  n_steps: ???
-  learning_rate: ???
+  n_steps: null
+  learning_rate: null
   weight_decay: 0.1
 
   scheduler:
     _partial_: true
     _target_: src.core.schedulers.get_cosine_scheduler_with_warmup
     final_lr_fraction: 0.1
-    # warmup_steps: 500
     # warmup_steps: ${eval:'int((${trainer.n_steps} * 0.01)'}
     warmup_steps: 40
 
