--- a/configs/_mas/crewtool.yaml
+++ b/configs/_mas/crewtool.yaml
@@ -1,3 +1,6 @@
 
 infrastructure:
   venv_path: $HOME/nano/.venv/bin/activate
+
+  slurm:
+    export: ALL,HF_HUB_CACHE="/net/scratch/hscra/plgrid/plgmstefaniak/hf_cash"
