--- a/configs/llama_compressor_8B.yaml
+++ b/configs/llama_compressor_8B.yaml
@@ -1,21 +1,28 @@
 
 defaults:
-  - _cluster@_here_: helios_4
+  # - _cluster@_here_: helios_4
+  - _cluster@_here_: helios_8
+  # - _cluster@_here_: entropy_8
   - _model@_here_: llama_3_8_pc
   - _trainer@_here_: llama
   - _dataset@_here_: c4
   - _checkpoints@_here_: none
   - _misc@_here_: default
   - _mas@_here_: helios
+  - _self_
   
 
 common:
   batch_size: 512
-
+  # batch_size: 64
 
 
 trainer:
-  gradient_accumulation_steps: 16
+  gradient_accumulation_steps: 4
+  # ^gradient_accumulation_steps: 
+  #   - 1
+  #   - 2
+
   n_steps: 1001
   
   ^learning_rate: 
