configs refactor - eval
* Base configs+ (#20)

* to hf +

* FSDP2 (#25)

fsdp2 added

* dev

* fixing base configs

* nano checkpointing works

* hf conversion fix, datt+

* dev

* improve logging

* dev

* fsdp2 fix checkpoint

* dev

* checkpoint path is unique

* Delete src/core/conversion_to_hf.py

* log environs to neptune

* Revert commit

* restore commit

* revert

* revert

* revert

* revert

* fix double quote error

* add abstract dataset

* add abstract dataset

* pr changes

* cleaned older configs

* Mas/eval config3 (#34)

* llama compression

* embedding fix

* comments addressed

* tokfix

* llama3.1_8B

* add support for fineweb-edu dataset

* fix double quote error

* add abstract dataset

* add abstract dataset

* dev

* dev

* pr update

---------

Co-authored-by: Michał Krutul <crewtoolcompany@gmail.com>
Co-authored-by: Mikołaj Dziok <m1kush@disroot.org>
Co-authored-by: Mikołaj Dziok <78161354+m1kush@users.noreply.github.com>

* pr changes

---------

Co-authored-by: Michał <45643363+crewtool@users.noreply.github.com>
Co-authored-by: Mikołaj Dziok <m1kush@disroot.org>
Co-authored-by: Michał Krutul <crewtoolcompany@gmail.com>
Co-authored-by: Mikołaj Dziok <78161354+m1kush@users.noreply.github.com>

--- a/configs/llama_projected.yaml
+++ b/configs/llama_projected.yaml
@@ -1,3 +1,5 @@
+# TODO old version - doesnt work
+
 common:
   _target_: src.definitions.Common
   dff: 486
@@ -197,7 +199,6 @@ infrastructure:
     nodes: 1
     partition: h100
     time: "0-1:00:00"
-    ntasks-per-node: 2
 
   venv_path: $HOME/nano/.venv/bin/activate # Change me!
   experiment_prepare_venv_path: ${infrastructure.venv_path}
