--- a/configs/exp.yaml
+++ b/configs/exp.yaml
@@ -1,5 +1,3 @@
-# _run_: true
-
 common:
   _target_: src.definitions.Common
   dff: 256
@@ -70,10 +68,10 @@ trainer:
       interval: 12500
       model_checkpoint_filename: __model_optim_scheduler__.pt
       training_state_filename: __training_state__.pt
-      path: checkpoints # Change me!
+      path: null # Change me!
 
     load:
-      type: "normal"
+      type: "nano"
       path:  ${trainer.checkpoint.save.path}
       model_checkpoint_filename: ${trainer.checkpoint.save.model_checkpoint_filename}
       training_state_filename: ${trainer.checkpoint.save.training_state_filename}
@@ -96,10 +94,13 @@ trainer:
 
   train_dataloader:
     _target_: src.core.datasets.get_dataloader
-    dataset_path: data
+#    dataset_path: data
+#    dataset_path: "/storage_nvme_1/llm-random/datasets/c4/train"
+    dataset_path: "/storage_nvme_4/llm-random/datasets/fineweb/train"
     dataset_split: train
-    dataset_type: c4
-    tokenize_fn: 
+#    dataset_type: c4
+    dataset_type: fineweb-edu
+    tokenize_fn:
       _target_: src.core.datasets.gpt2_tokenize_fn
     num_workers: 0 # Change me!
     seed: 20001
@@ -111,9 +112,11 @@ trainer:
 
   eval_dataloader:
     _target_: src.core.datasets.get_dataloader
-    dataset_path: data_eval
+#    dataset_path: data_eval
+#    dataset_path: "/storage_nvme_1/llm-random/datasets/c4/validation"
+    dataset_path: "/storage_nvme_4/llm-random/datasets/fineweb/train"
     dataset_split: validation
-    dataset_type: c4
+    dataset_type: fineweb-edu
     tokenize_fn: 
       _target_: src.core.datasets.gpt2_tokenize_fn
     num_workers: 0 # Change me!
@@ -129,12 +132,12 @@ trainer:
       mixed_precision:
         dtype: bfloat16
         ignored_classes:
-          - LayerNorm
-          - AttentionMechanism
+          - src.core.model.RMSNorm
+          - src.core.model.AttentionMechanism
       modules_to_wrap:
-        - TransformerBlock
-        - EmbeddingLayer
-        - PredictionHead
+        - src.projected_compression.model.TransformerEmbedding
+        - src.projected_compression.model.TransformerBlock
+        - src.projected_compression.model.TransformerHead
 
 infrastructure:
   slurm:
@@ -145,7 +148,6 @@ infrastructure:
     nodes: 1
     partition: h100
     time: "0-1:00:00"
-    ntasks-per-node: 2
 
   venv_path: $HOME/nano/.venv/bin/activate # Change me!
   experiment_prepare_venv_path: ${infrastructure.venv_path}
@@ -155,10 +157,10 @@ infrastructure:
   metric_logger:
     _target_: src.definitions.MetricLoggerConfig
     heavy_metrics_calculation_interval: 100
-    name: test
+    name: new_fineweb_test
     new_neptune_job: false
-    # project_name: pmtest/llm-random
-    project_name: crewtool/mojtestproject
+    project_name: pmtest/llm-random
+#    project_name: new_c4_test
     tags:
       - test
     type: neptune
