--- a/configs/_mas/crewtool.yaml
+++ b/configs/_mas/crewtool.yaml
@@ -3,4 +3,5 @@ infrastructure:
   venv_path: $HOME/nano/.venv/bin/activate
 
   slurm:
-    export: ALL,HF_HUB_CACHE="/net/scratch/hscra/plgrid/plgmstefaniak/hf_cash"
+    # export: ALL,HF_HUB_CACHE="/net/scratch/hscra/plgrid/plgmstefaniak/hf_cash"
+    export: ALL,HF_HUB_CACHE=/storage_nvme_3/crewtool/huggingface/hub
