--- a/configs/llama_compressor_1B.yaml
+++ b/configs/llama_compressor_1B.yaml
@@ -23,27 +23,42 @@ common:
 
 trainer:
   gradient_accumulation_steps: 8
-  n_steps: 101
+  # n_steps: 2048
+  # n_steps: 2  
+  ^n_steps: 
+   - 4096
+   - 6144
 
   # 6.103515625e-05, 3.0517578125e-05, 1.52587890625e-05, 7.62939453125e-06, 3.814697265625e-06, 1.9073486328125e-06
-  learning_rate: 6.103515625e-05
-  # ^learning_rate: 
-  #   - 7.62939453125e-06
-  #   - 3.814697265625e-06
-  #   - 1.52587890625e-05
-  #   - 3.0517578125e-05
-  #   - 1.9073486328125e-06
-  #   - 6.103515625e-05
+  # learning_rate: 3.0517578125e-05
+  ^learning_rate: 
+    - 6.103515625e-05
+    # - 3.0517578125e-05
+
 
   checkpoint:
-   save:
-    path: null
+   save:  
+    path: /storage_nvme_3/crewtool/nano_checkpoints/llama31_pc # entropy_c
+    # path: null
     # path: /storage_nvme_3/mstefaniak/nano_checkpoints/llama31_pc # entropy
     # path: /net/scratch/hscra/plgrid/plgmstefaniak/checkpoints/pc # helios
-  #  load:
-  #   type: huggingface
-  #   path: "meta-llama/Llama-3.2-1B"
+   load:
+    type: huggingface
+    path: "meta-llama/Llama-3.2-1B"
 
+  train_dataloader:
+    seed: 1
+    # ^seed: 
+    #  - 1
+    #  - 2
+    #  - 3
+    #  - 4
+    #  - 5
+
+  eval_dataloader:
+    seed: 124
+
+  
 
 infrastructure:
   metric_logger:
@@ -53,5 +68,5 @@ infrastructure:
       - pc
       - llama_1_pc
 
-  
+
 
