Squashed commit of the following:
commit 87f13e7b78a4c2acbb5a42c7bc145bb9cf663e40
Author: Maciej Stefaniak <madragonse@gmail.com>
Date:   Fri Aug 29 18:30:51 2025 +0200

    pr changes

commit e3892c6ba9f3bfa53051eb46b7bb48281120bfec
Author: Maciej Stefaniak <madragonse@gmail.com>
Date:   Fri Aug 29 16:19:26 2025 +0200

    dev

commit ffc18a403ae18fa33520640d8dd86908cad4cf3b
Author: Maciej Stefaniak <madragonse@gmail.com>
Date:   Fri Aug 29 16:19:10 2025 +0200

    dev

commit 1baa5b9af1863803b18e27c730d204b6138ba628
Author: Maciej Stefaniak <madragonse@gmail.com>
Date:   Thu Aug 28 17:21:15 2025 +0200

    dev

commit b9a2c551b075974112f97bb6b72163f648d93a79
Author: Maciej Stefaniak <madragonse@gmail.com>
Date:   Thu Aug 28 17:20:27 2025 +0200

    dev

commit 4b1973700001ff44df347495d4e41d5ebd669716
Author: Maciej Stefaniak <madragonse@gmail.com>
Date:   Wed Aug 27 19:02:42 2025 +0200

    dev

commit 32edf9140333257d2dacb774c001211e697fbae4
Author: Maciej Stefaniak <madragonse@gmail.com>
Date:   Tue Aug 26 11:21:38 2025 +0200

    dev

commit 21796a0b4269ce0ee06e0844d4cc8732b4e0712b
Author: Maciej Stefaniak <madragonse@gmail.com>
Date:   Tue Aug 26 11:03:53 2025 +0200

    dev

commit 5b7fe00a7598b8d580a02712b9d7a0724e42e9d4
Author: Maciej Stefaniak <madragonse@gmail.com>
Date:   Sat Aug 23 16:43:01 2025 +0200

    cleaned older configs

commit 13c11d9e12f5d8a99b75d49431874e3bd79438a2
Author: Maciej Stefaniak <madragonse@gmail.com>
Date:   Sat Aug 23 16:24:24 2025 +0200

    pr changes

commit a1839921d1e8de84162629e331c8d02ca1679268
Merge: 01d19d3 0324c69
Author: Michał Krutul <crewtoolcompany@gmail.com>
Date:   Sat Aug 23 11:44:36 2025 +0200

    Merge branch 'main' into mas/eval

commit 01d19d350f196f0b986e8cba4a22849a95fa9e22
Author: Michał Krutul <crewtoolcompany@gmail.com>
Date:   Sat Aug 23 10:23:12 2025 +0200

    revert

commit e357e8d7133920f8bb274c6912b8abc1341634a9
Author: Michał Krutul <crewtoolcompany@gmail.com>
Date:   Sat Aug 23 10:21:21 2025 +02

--- a/configs/_model/llama_3_1.yaml
+++ b/configs/_model/llama_3_1.yaml
@@ -4,9 +4,9 @@ common:
   dmodel: 2048
   dff: 8192
   datt: 2048
+  n_blocks: 16
   q_heads: 32
   kv_heads: 8
-  n_blocks: 16
   vocab_size: 128256
   sequence_length: 1024
   head_norm: true
@@ -41,6 +41,7 @@ model:
         _target_: src.projected_compression.model.RoPEAttention
         _partial_: true
         dmodel: ${common.dmodel}
+        # datt: ${common.datt}
         q_heads: ${common.q_heads}
         kv_heads: ${common.kv_heads}
         seq_len: ${common.sequence_length}
