--- a/configs/_cluster/entropy_4_a100.yaml
+++ b/configs/_cluster/entropy_4_a100.yaml
@@ -1,14 +1,14 @@
 
 infrastructure:
-  server: helios
+  server: entropy
   slurm:
-    cpus-per-task: 12
+    cpus-per-task: 16
     gres: gpu:4
     job-name: test
     mem_per_gpu: 90G
-    nodes: 2
-    partition: plgrid-gpu-gh200
-    time: "2-00:00:00"
+    nodes: 1
+    partition: a100
+    time: "0-05:00:00"
 
   venv_path: ???
   experiment_prepare_venv_path: ${infrastructure.venv_path}
@@ -21,6 +21,6 @@ infrastructure:
 switch:
   trainer:
     train_dataloader:
-      dataset_path_c4: "/net/scratch/hscra/plgrid/plgmaciejpioro/c4/train" # helios
+      dataset_path_c4: "/storage_nvme_1/llm-random/datasets/c4/train" # entropy
     eval_dataloader:
-      dataset_path_c4: "/net/scratch/hscra/plgrid/plgmaciejpioro/c4/validation" # helios
+      dataset_path_c4: "/storage_nvme_1/llm-random/datasets/c4/validation" # entropy
