--- a/configs/llama3_1_nano_to_hf.yaml
+++ b/configs/llama3_1_nano_to_hf.yaml
@@ -31,10 +31,10 @@ trainer:
   checkpoint:
    save:
     type: huggingface
-    path: "/storage_nvme_3/mstefaniak/nano_checkpoints/llama3_1_hf_test_1"
+    path: null # change
    load:
     type: nano
-    path: "/storage_nvme_3/mstefaniak/nano_checkpoints/llaama3_1_nano/63962/0/step_100"
+    path: null  # change
     training_state_filename: null
   
 infrastructure:
