--- a/configs/_dataset/c4.yaml
+++ b/configs/_dataset/c4.yaml
@@ -6,11 +6,11 @@ trainer:
     dataset_path: ${switch.trainer.train_dataloader.dataset_path_c4}
     dataset_split: train
     dataset_type: c4
-    num_workers: 12
+    num_workers: 8
     seed: 20001
     sequence_length: ${common.sequence_length}
     shuffle: true
-    total_batch_size: ${common.sequence_length}
+    total_batch_size: ${common.batch_size}
     use_new_sampling_method: true
     world_size_independent: true
     tokenize_fn:
@@ -21,11 +21,11 @@ trainer:
     dataset_path: ${switch.trainer.eval_dataloader.dataset_path_c4}
     dataset_split: validation
     dataset_type: c4
-    num_workers: 12
+    num_workers: 8
     seed: 123
     sequence_length: ${common.sequence_length}
     shuffle: true
-    total_batch_size: ${common.sequence_length}
+    total_batch_size: ${common.batch_size}
     use_new_sampling_method: true
     world_size_independent: true
     tokenize_fn:
