--- a/configs/_trainer/llama.yaml
+++ b/configs/_trainer/llama.yaml
@@ -2,8 +2,8 @@
 trainer:
   _partial_: true
   _target_: src.core.trainer.Trainer
-  eval_interval: 1000
-  n_eval_steps: 10 
+  eval_interval: 100
+  n_eval_steps: 10
   gradient_accumulation_steps: 1
   gradient_clipping: 1.0
   n_steps: null
@@ -14,8 +14,7 @@ trainer:
     _partial_: true
     _target_: src.core.schedulers.get_cosine_scheduler_with_warmup
     final_lr_fraction: 0.1
-    # warmup_steps: ${eval:'int((${trainer.n_steps} * 0.01)'}
-    warmup_steps: 40
+    warmup_steps: ${eval:'int(${trainer.n_steps} * 0.01)'}
 
   distributed:
     fsdp2:
@@ -23,3 +22,12 @@ trainer:
         - ${model.embedding._target_}
         - ${model.encoder.block_fn._target_}
         - ${model.head._target_}
+  
+  train_dataloader:
+    tokenize_fn:
+      _target_: src.core.datasets.llama_tokenize_fn
+      
+
+  eval_dataloader:
+    tokenize_fn:
+      _target_: src.core.datasets.llama_tokenize_fn
