--- a/configs/fine_tune.yaml
+++ b/configs/fine_tune.yaml
@@ -2,7 +2,7 @@
 
 defaults:
   - _cluster@_here_: entropy_4
-  - _model@_here_: llama_3_1
+  - _model@_here_: llama_3_1_50
   - _trainer@_here_: llama
   - _dataset@_here_: c4
   - _checkpoints@_here_: none
@@ -14,13 +14,13 @@ infrastructure:
     tags:
       - nano
       - pc
-      - test_ft_nano
+      - fine-tune
 
 trainer:
   n_steps: 2000
-  learning_rate: 0.00005
+  learning_rate: 6.103515625e-05
   gradient_accumulation_steps: 4
 
   checkpoint:
    load:
-    path: "/home/mstefaniak/llmrandom_cemetery/run_exp_2025-08-12_16-18-34/checkpoints/0/step_-1"
+    path: null # change me
