--- a/configs/_cluster/helios.yaml
+++ b/configs/_cluster/helios.yaml
@@ -9,13 +9,14 @@ infrastructure:
     partition: plgrid-gpu-gh200
     time: "2-00:00:00"
 
+  modules_to_add:
+  - ML-bundle/25.04
+
+
 
 cluster_switch:
   train_path_c4: "/net/scratch/hscra/plgrid/plgmaciejpioro/c4/train"
   eval_path_c4: "/net/scratch/hscra/plgrid/plgmaciejpioro/c4/validation"
-  train_path_fineweb:
-  eval_path_fineweb: 
+  train_path_fineweb: "/net/scratch/hscra/plgrid/plgmaciejpioro/fineweb-edu/train/train"
+  eval_path_fineweb: "/net/scratch/hscra/plgrid/plgmaciejpioro/fineweb-edu/train/train"
   num_workers: 8
-
-modules_to_add:
-  - ML-bundle/25.04
