--- a/configs/_model/llama/base_pc_model.yaml
+++ b/configs/_model/llama/base_pc_model.yaml
@@ -2,6 +2,7 @@ common:
   _target_: src.definitions.Common
   dmodel: ???
   dff: ???
+  dhead: ???
   sequence_length: ???
   base_dmodel: ???
   base_dff: ???
@@ -51,7 +52,7 @@ model:
           result_in_features: ${common.dmodel}
           result_out_features: null
           base_in_features: ${common.base_dmodel}
-          base_out_features: ${common.base_dmodel}
+          base_out_features: ${eval:'${model.encoder.block_fn.attention_fn.q_heads} * ${common.dhead}}'}
 
         k_proj_fn:
           _target_: src.projected_compression.model.ProjectedLinear
@@ -59,7 +60,7 @@ model:
           result_in_features: ${common.dmodel}
           result_out_features: null
           base_in_features: ${common.base_dmodel}
-          base_out_features: ${eval:'${model.encoder.block_fn.attention_fn.kv_heads} * (${common.base_dmodel} // ${model.encoder.block_fn.attention_fn.q_heads})'}
+          base_out_features: ${eval:'${model.encoder.block_fn.attention_fn.kv_heads} * ${common.dhead}}'}
 
         v_proj_fn: ${model.encoder.block_fn.attention_fn.k_proj_fn}
 
@@ -68,7 +69,7 @@ model:
           _partial_: true
           result_in_features: null
           result_out_features: ${common.dmodel}
-          base_in_features: ${common.base_dmodel}
+          base_in_features: ${eval:'${model.encoder.block_fn.attention_fn.q_heads} * ${common.dhead}}'}
           base_out_features: ${common.base_dmodel}
 
         rope_base: 500_000
@@ -106,4 +107,4 @@ model:
         _target_: src.core.model.RMSNorm
         _partial_: true
         eps: 1e-5
-        normalized_shape: ${common.base_dmodel}
+        normalized_shape: ${common.base_dmodel} # after projection_init it becames ${common.dmodel}
