--- a/configs/exp.yaml
+++ b/configs/exp.yaml
@@ -1,174 +1,29 @@
-common:
-  _target_: src.definitions.Common
-  dff: 256
-  dmodel: 64
-  head_norm: true
-  init_scale: 0.1
-  init_type: truncated_normal_fixed
-  model_type: gpt
-  sequence_length: 32
-  vocab_size: 50257
-  
-model:
-  _target_: src.core.model.LLM
+defaults:
+  - _misc@_here_: default
+  - _dataset@_here_: c4
+  - _cluster@_here_: entropy
+  - _model/llama@_here_: projected_1B
+  - _trainer@_here_: llama
 
-  embedding:
-    _target_: src.core.model.get_vanilla_embedding
-    vocab_size: ${common.vocab_size}
-    dmodel: ${common.dmodel}
-    init_type: ${common.init_type}
-    init_scale: ${common.init_scale}
-    sequence_length: ${common.sequence_length}
+  - _checkpoints@_here_: none
 
-  tower:
-    _target_: src.core.model.TransformerTower
-    n_blocks: 2
-    block_fn:
-      _target_: src.core.model.TransformerBlock
-      _partial_: true
-      residual_fn:
-        _target_: src.core.model.PreNormBlock
-        _partial_: true
-        dmodel: ${common.dmodel}
-        norm_class:
-          _target_: src.core.model.LayerNorm
-          _partial_: true
-
-      attention_fn:
-        _target_: src.core.model.Attention
-        _partial_: true
-        dmodel: ${common.dmodel}
-        heads: 2
-        causal: true
-        init_scale: ${common.init_scale}
-        init_type: ${common.init_type}
-
-      ff_layer_fn:
-        _target_: src.core.model.FeedForward
-        _partial_: true
-        dmodel: ${common.dmodel}
-        dff: ${common.dff}
-        init_scale: ${common.init_scale}
-        init_type: ${common.init_type}
-
-  head:
-    _target_: src.core.model.PredictionHead
-    embedding_dim: ${common.dmodel}
-    output_size: ${common.vocab_size}
-    init_type: ${common.init_type}
-    init_scale: ${common.init_scale}
-    use_layer_norm: ${common.head_norm}
-
-trainer:
-  _partial_: true
-  _target_: src.core.trainer.Trainer
-
-  checkpoint:
-    save:
-      interval: 12500
-      model_checkpoint_filename: __model_optim_scheduler__.pt
-      training_state_filename: __training_state__.pt
-      path: null # Change me!
-
-    load:
-      type: "nano"
-      path:  ${trainer.checkpoint.save.path}
-      model_checkpoint_filename: ${trainer.checkpoint.save.model_checkpoint_filename}
-      training_state_filename: ${trainer.checkpoint.save.training_state_filename}
-
-  eval_interval: 100
-  n_eval_steps: 5
-
-  gradient_accumulation_steps: 1
-  gradient_clipping: 1.0
-  n_steps: 100
-
-  learning_rate: 0.001
-  scheduler:
-    _partial_: true
-    _target_: src.core.schedulers.get_cosine_scheduler_with_warmup
-    final_lr_fraction: 0.1
-    warmup_steps: 500
-
-  weight_decay: 0.1
-
-  train_dataloader:
-    _target_: src.core.datasets.get_dataloader
-#    dataset_path: data
-#    dataset_path: "/storage_nvme_1/llm-random/datasets/c4/train"
-    dataset_path: "/storage_nvme_4/llm-random/datasets/fineweb/train"
-    dataset_split: train
-#    dataset_type: c4
-    dataset_type: fineweb-edu
-    tokenize_fn:
-      _target_: src.core.datasets.gpt2_tokenize_fn
-    num_workers: 0 # Change me!
-    seed: 20001
-    sequence_length: 32
-    shuffle: true
-    total_batch_size: 32
-    use_new_sampling_method: true
-    world_size_independent: false
-
-  eval_dataloader:
-    _target_: src.core.datasets.get_dataloader
-#    dataset_path: data_eval
-#    dataset_path: "/storage_nvme_1/llm-random/datasets/c4/validation"
-    dataset_path: "/storage_nvme_4/llm-random/datasets/fineweb/train"
-    dataset_split: validation
-    dataset_type: fineweb-edu
-    tokenize_fn: 
-      _target_: src.core.datasets.gpt2_tokenize_fn
-    num_workers: 0 # Change me!
-    seed: 123
-    sequence_length: 32
-    shuffle: true
-    total_batch_size: 32
-    use_new_sampling_method: true
-    world_size_independent: false
-
-  distributed:
-    fsdp:
-      mixed_precision:
-        dtype: bfloat16
-        ignored_classes:
-          - src.core.model.RMSNorm
-          - src.core.model.AttentionMechanism
-      modules_to_wrap:
-        - src.projected_compression.model.TransformerEmbedding
-        - src.projected_compression.model.TransformerBlock
-        - src.projected_compression.model.TransformerHead
 
 infrastructure:
   slurm:
-    cpus-per-task: 32
     gres: gpu:2
-    job-name: test
-    mem_per_gpu: 125G
-    nodes: 1
-    partition: h100
-    time: "0-1:00:00"
-
-  venv_path: $HOME/nano/.venv/bin/activate # Change me!
-  experiment_prepare_venv_path: ${infrastructure.venv_path}
-
-  cemetery_experiments_dir: ~/llmrandom_cemetery
-
-  metric_logger:
-    _target_: src.definitions.MetricLoggerConfig
-    heavy_metrics_calculation_interval: 100
-    name: new_fineweb_test
-    new_neptune_job: false
-    project_name: pmtest/llm-random
-#    project_name: new_c4_test
-    tags:
-      - test
-    type: neptune
-
-  git:
-    remote_name: cemetery
-    remote_url: git@github.com:llm-random/llm-random-cemetery.git
-
+    job_name: test_job
+  venv_path: $HOME/nano/.venv/bin/activate
   server: entropy
 
-  generated_configs_path: generated_configs
+common: 
+  batch_size: 32
+  sequence_length: 32 # totally toy example
+
+trainer:
+  n_steps: 100
+  learning_rate: 5e-5
+  
+  checkpoint:
+    load:
+      type: huggingface
+      path: "meta-llama/Llama-3.2-1B"
