--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-# Tested with Python 3.11.7
-torch==2.8.0
+--extra-index-url https://download.pytorch.org/whl/cu128
+torch==2.7.1
 transformers==4.46.2
 datasets==3.1.0
 neptune==1.13.0
