--- a/configs/llama_1B.yaml
+++ b/configs/llama_1B.yaml
@@ -1,7 +1,7 @@
-
 defaults:
+  # - _cluster@_here_: helios_4
   - _cluster@_here_: entropy
-  - _model/llama@_here_: projected_1B
+  - _model@_here_: llama_3_1
   - _trainer@_here_: llama
   - _dataset@_here_: c4
   - _checkpoints@_here_: none
@@ -14,8 +14,9 @@ common:
   sequence_length: 1024
   batch_size: 512
 
-  dmodel: 1344
-  dff: 5376
+  # # 50%
+  # dmodel: 1344
+  # dff: 5376
 
 
 trainer:
@@ -24,12 +25,15 @@ trainer:
 
   learning_rate: 6.103515625e-05
 
+
   checkpoint:
-   save:  
-    path: null
    load:
+    type: nano
+    path: null #change
+   save:
     type: huggingface
-    path: "meta-llama/Llama-3.2-1B"
+    path: null #change
+  
 
 infrastructure:
   metric_logger:
@@ -37,9 +41,8 @@ infrastructure:
     tags:
       - nano
       - pc
-      - llama_1_pc
+      - llama_1
 
-  slurm: 
+  slurm:
     gres: gpu:4
-
 
