--- a/configs/llama_compressor_1B_load.yaml
+++ b/configs/llama_compressor_1B_load.yaml
@@ -1,22 +1,33 @@
-
 defaults:
   - _cluster@_here_: entropy
-  - _model@_here_: llama_tiny_compressor
+  - _model/llama@_here_: projected_1B
   - _trainer@_here_: llama
   - _dataset@_here_: c4
   - _checkpoints@_here_: none
   - _misc@_here_: default
   - _mas@_here_: crewtool
   
+
 common:
   sequence_length: 1024
-  batch_size: 128
+  batch_size: 512
+  dff: 5376
+  dmodel: 1344
+
 
 trainer:
-  gradient_accumulation_steps: 1
-  n_steps: 300
+  gradient_accumulation_steps: 8
+  n_steps: 101
   
   learning_rate: 6.103515625e-05
+
+  checkpoint:
+   save:
+    path: null
+   load: #change
+    type: huggingface
+    path: "meta-llama/Llama-3.2-1B" 
+
 
 infrastructure:
   metric_logger:
@@ -24,7 +35,8 @@ infrastructure:
     tags:
       - nano
       - pc
-      - tiny_compressor
+      - llama_8_pc
+      - sparsity_50
 
-  
-
+  slurm: 
+    gres: gpu:4
