--- a/configs/_cluster/entropy_a100.yaml
+++ b/configs/_cluster/entropy_a100.yaml
@@ -9,6 +9,20 @@ infrastructure:
     partition: a100
     time: "2-00:00:00"
 
+  script:
+    - "PROJECT_HOME_PATH=/storage_nvme_2/projected_compression"
+    - |
+      VENV_PATH=$PROJECT_HOME_PATH/pc_venv
+      HF_HOME=$PROJECT_HOME_PATH/hf_cache
+
+      # Check if venv exists
+      if [ ! -d "$VENV_PATH" ]; then
+        echo 'Virtual environment not found. Creating...'
+        python3 -m venv "$VENV_PATH"
+        pip install --upgrade pip
+      fi 
+      source "$VENV_PATH/bin/activate"
+      pip install --upgrade -r requirements.txt
 
 cluster_switch:
   train_path_c4: "/storage_nvme_1/llm-random/datasets/c4/train"
