--- a/configs/_cluster/helios.yaml
+++ b/configs/_cluster/helios.yaml
@@ -9,8 +9,21 @@ infrastructure:
     partition: plgrid-gpu-gh200
     time: "2-00:00:00"
 
-  modules_to_add:
-  - ML-bundle/25.04
+  script:
+    - "module load ML-bundle/25.04"
+    - "PROJECT_HOME_PATH=$PLG_GROUPS_STORAGE/projected_compression"
+    - |
+      VENV_PATH=$PROJECT_HOME_PATH/pc_venv
+      HF_HOME=$PROJECT_HOME_PATH/hf_cache
+
+      # Check if venv exists
+      if [ ! -d "$VENV_PATH" ]; then
+        echo 'Virtual environment not found. Creating...'
+        python3 -m venv "$VENV_PATH"
+        pip install --upgrade pip
+      fi 
+      source "$VENV_PATH/bin/activate"
+      pip install --upgrade -r requirements.txt
 
 
 
