--- a/configs/_cluster/helios.yaml
+++ b/configs/_cluster/helios.yaml
@@ -14,7 +14,7 @@ infrastructure:
     - "PROJECT_HOME_PATH=$PLG_GROUPS_STORAGE/projected_compression"
     - |
       VENV_PATH=$PROJECT_HOME_PATH/pc_venv
-      HF_HOME=$PROJECT_HOME_PATH/hf_cache
+      export HF_HOME=$PROJECT_HOME_PATH/hf_cache
 
       # Check if venv exists
       if [ ! -d "$VENV_PATH" ]; then
