--- a/configs/_cluster/local.yaml
+++ b/configs/_cluster/local.yaml
@@ -4,5 +4,11 @@ infrastructure:
   server: local
   slurm: null
 
-  experiment_prepare_venv_path: null
   cemetery_experiments_dir: null
+
+cluster_switch:
+  train_path_c4: "data"
+  eval_path_c4: "data_eval"
+  train_path_fineweb: "data"
+  eval_path_fineweb: "data"
+  num_workers: 0
