--- a/configs/llama_1B_load_pc.yaml
+++ b/configs/llama_1B_load_pc.yaml
@@ -1,30 +1,35 @@
 
 defaults:
   - _cluster@_here_: entropy
-  - _model/llama@_here_: projected_1B
+  - _model@_here_: llama_3_1
   - _trainer@_here_: llama
   - _dataset@_here_: c4
   - _checkpoints@_here_: none
   - _misc@_here_: default
-
+  
 
 common:
   sequence_length: 1024
   batch_size: 512
+  dmodel: 1344
+  dff: 5376
 
 
 trainer:
   gradient_accumulation_steps: 8
-  n_steps: 2048
-
+  n_steps: 101
+  
   learning_rate: 6.103515625e-05
 
   checkpoint:
-   save:  
-    path: null
+   save:
+    type: nano
+    path: null #change
    load:
-    type: huggingface
-    path: "meta-llama/Llama-3.2-1B"
+    type: finalized_pc
+    path: null #change
+    training_state_filename: null
+
 
 infrastructure:
   metric_logger:
@@ -32,9 +37,9 @@ infrastructure:
     tags:
       - nano
       - pc
-      - llama_1_pc
-
-  slurm: 
+      - llama_8_pc
+      - sparsity_50
+    
+  slurm:
     gres: gpu:4
-
 
