--- a/configs/llama_compressor_1B_finalize.yaml
+++ b/configs/llama_compressor_1B_finalize.yaml
@@ -1,35 +1,32 @@
-
 defaults:
-  - _cluster@_here_: entropy_4
-  - _model@_here_: llama_3_1_pc
+  - _cluster@_here_: entropy
+  - _model/llama@_here_: projected_1B
   - _trainer@_here_: llama
   - _dataset@_here_: c4
   - _checkpoints@_here_: none
   - _misc@_here_: default
-  - _mas@_here_: entropy
   
 
 common:
   sequence_length: 1024
   batch_size: 512
-  dff: 3072
-  dmodel: 1536
-  # dff: 2048
-  # dmodel: 1024
+  dff: 5376 # 50%
+  dmodel: 1344
 
 
 trainer:
-  gradient_accumulation_steps: 4
-  n_steps: 401
+  gradient_accumulation_steps: 8
+  n_steps: 0
   
   learning_rate: 6.103515625e-05
 
   checkpoint:
    save:
-    path: nano
-   load:
-    type: nano
-    training_state_filename: null
+    type: pc_finalize
+    path: null #change
+   load: #change
+    type: huggingface
+    path: "meta-llama/Llama-3.2-1B" 
 
 
 infrastructure:
@@ -38,6 +35,7 @@ infrastructure:
     tags:
       - nano
       - pc
-      - llama_8_pc
-      - sparsity_50
+      - llama_8_pc_finalized
 
+  slurm: 
+    gres: gpu:4
