--- a/configs/llama_compressor_tiny.yaml
+++ b/configs/llama_compressor_tiny.yaml
@@ -1,12 +1,11 @@
 
 defaults:
-  - _cluster@_here_: entropy_4
+  - _cluster@_here_: entropy
   - _model@_here_: llama_tiny_compressor
   - _trainer@_here_: llama
   - _dataset@_here_: c4
   - _checkpoints@_here_: none
   - _misc@_here_: default
-  - _mas@_here_: entropy
   
 common:
   sequence_length: 1024
