--- a/configs/_cluster/entropy.yaml
+++ b/configs/_cluster/entropy.yaml
@@ -27,6 +27,6 @@ infrastructure:
 cluster_switch:
   train_path_c4: "/storage_nvme_1/llm-random/datasets/c4/train"
   eval_path_c4: "/storage_nvme_1/llm-random/datasets/c4/validation"
-  train_path_fineweb:
-  eval_path_fineweb:
+  train_path_fineweb: "/storage_nvme_4/llm-random/datasets/fineweb/train"
+  eval_path_fineweb: "/storage_nvme_4/llm-random/datasets/fineweb/train"
   num_workers: 8
