--- a/configs/_dataset/fineweb.yaml
+++ b/configs/_dataset/fineweb.yaml
@@ -7,10 +7,10 @@ trainer:
     dataset_path: ${cluster_switch.train_path_fineweb}
     dataset_split: train
     dataset_type: fineweb-edu
-    num_workers: ${cluster_switch.num_workers}
+    num_workers: 3
 
   eval_dataloader:
     dataset_path: ${cluster_switch.eval_path_fineweb}
     dataset_split: train
     dataset_type: fineweb-edu
-    num_workers: ${cluster_switch.num_workers}
+    num_workers: 3
