--- a/configs/llama_1B_prune.yaml
+++ b/configs/llama_1B_prune.yaml
@@ -1,9 +1,9 @@
-
 defaults:
   - _cluster@_here_: entropy
-  - _model/llama@_here_: projected_1B
+  - _model@_here_: llama_3_1
   - _trainer@_here_: llama
   - _dataset@_here_: c4
+  # - _dataset@_here_: fineweb
   - _checkpoints@_here_: none
   - _misc@_here_: default
 
@@ -17,14 +17,17 @@ trainer:
   gradient_accumulation_steps: 8
   n_steps: 2048
 
-  learning_rate: 6.103515625e-05
+  ^learning_rate: 
+    - 0.0001220703125
 
   checkpoint:
-   save:  
-    path: null
    load:
     type: huggingface
     path: "meta-llama/Llama-3.2-1B"
+   save:
+    type: nano
+    path: null #change
+
 
 infrastructure:
   metric_logger:
@@ -32,14 +35,15 @@ infrastructure:
     tags:
       - nano
       - pc
-      - llama_1_pc
+      - llama_1
 
-  slurm: 
+  slurm:
     gres: gpu:4
 
 apply_functions:
-  - _target_: src.projected_compression.compression.init_compression
+  - _target_: src.projected_compression.pruning.prune
     _partial_: true
-    dimensions_importances_path: ??? # change
-    target_dmodel: ${common.dmodel}
-    target_dff: ${common.dff}
+    dimensions_importances_path: /storage_nvme_3/crewtool/nano_checkpoints/tmp/65575/0/minitron_dimensions_importances.pt
+    target_dmodel: 1344
+    target_dff: 5376
+
