Importances calculation and pruning/PC init with them (#58)
Refactor + Squashed commit of the following:

commit 7f809a5213ffa3bc7c61411eb7acf7a6bb7f021c
Author: Mikołaj Dziok <m1kush@disroot.org>
Date:   Wed Sep 3 17:04:21 2025 +0200

--- a/configs/_cluster/entropy.yaml
+++ b/configs/_cluster/entropy.yaml
@@ -27,6 +27,5 @@ infrastructure:
 cluster_switch:
   train_path_c4: "/storage_nvme_1/llm-random/datasets/c4/train"
   eval_path_c4: "/storage_nvme_1/llm-random/datasets/c4/validation"
-  train_path_fineweb:
-  eval_path_fineweb:
-  num_workers: 8
+  train_path_fineweb: ???
+  eval_path_fineweb: ???
