--- a/configs/llama_1B_importances.yaml
+++ b/configs/llama_1B_importances.yaml
@@ -1,11 +1,10 @@
 defaults:
-  - _cluster@_here_: entropy
+  - _misc@_here_: default
+  - _cluster@_here_: helios
   - _model@_here_: llama_3_1
   - _trainer@_here_: llama
   - _dataset@_here_: c4
   # - _dataset@_here_: fineweb
-  - _checkpoints@_here_: none
-  - _misc@_here_: default
 
 common:
   sequence_length: 1024
