--- a/configs/llama_1B_importances.yaml
+++ b/configs/llama_1B_importances.yaml
@@ -21,13 +21,10 @@ trainer:
    load:
     type: huggingface
     path: "meta-llama/Llama-3.2-1B"
-   save:
-    type: nano
-    path: ??? # change
 
 infrastructure:
   metric_logger:
-    name: Llame_PC
+    name: importances
     tags:
       - nano
       - pc
@@ -44,19 +41,19 @@ infrastructure:
 apply_functions:
   - _target_: src.projected_compression.weight_importances.dummy_importances
     _partial_: true
-    dmodel: ${common.dmodel}
-    dff: ${common.dff}
+    target_dmodel: ${common.dmodel}
+    target_dff: ${common.dff}
     n_blocks: ${model.encoder.n_blocks}
     checkpoint_save_path: ${trainer.checkpoint.save.path}
-  - _target_: src.projected_compression.weight_importances.minitron_importances
-    _partial_: true
-    dataloader: ${trainer.train_dataloader}
-    dmodel: ${common.dmodel}
-    dff: ${common.dff}
-    calibration_dataset_size: 1024
-    seq_len: ${common.sequence_length}
-    total_batch_size: ${trainer.train_dataloader.total_batch_size}
-    n_blocks: ${model.encoder.n_blocks}
-    checkpoint_save_path: ${trainer.checkpoint.save.path}
-  - _target_: src.core.utils.finish_exp
-    _partial_: true
+    model_dir_name: llama3_2_1B
+
+  # - _target_: src.projected_compression.weight_importances.minitron_importances
+  #   _partial_: true
+  #   dataloader: ${trainer.train_dataloader}
+  #   dmodel: ${common.dmodel}
+  #   dff: ${common.dff}
+  #   calibration_dataset_size: 1024
+  #   seq_len: ${common.sequence_length}
+  #   total_batch_size: ${trainer.train_dataloader.total_batch_size}
+  #   n_blocks: ${model.encoder.n_blocks}
+  #   checkpoint_save_path: ${trainer.checkpoint.save.path}
