--- a/configs/_dataset/default.yaml
+++ b/configs/_dataset/default.yaml
@@ -5,12 +5,12 @@ trainer:
     dataset_split: ???
     dataset_type: ???
     num_workers: ???
-    seed: 1
+    seed: 1000
     sequence_length: ${common.sequence_length}
     shuffle: true
     total_batch_size: ${common.batch_size}
     use_new_sampling_method: true
-    world_size_independent: true
+    world_size_independent: false
     tokenize_fn: ???
 
   eval_dataloader:
@@ -24,5 +24,5 @@ trainer:
     shuffle: true
     total_batch_size: ${common.batch_size}
     use_new_sampling_method: true
-    world_size_independent: true
+    world_size_independent: false
     tokenize_fn: ???
