--- a/configs/llama_1B_ta.yaml
+++ b/configs/llama_1B_ta.yaml
@@ -1,9 +1,10 @@
 defaults:
-  # - _cluster@_here_: helios_4
+  # - _cluster@_here_: helios
   - _cluster@_here_: entropy
+  # - _cluster@_here_: entropy_a100
   - _model@_here_: llama_3_1
   - _trainer@_here_: llama
-  - _dataset@_here_: c4
+  - _dataset@_here_: fineweb
   - _checkpoints@_here_: none
   - _misc@_here_: default
 
@@ -15,28 +16,40 @@ common:
 
 trainer:
   gradient_accumulation_steps: 8
-  n_steps: 2048
+  ^n_steps: 
+    # - 2048
+    # - 4096
+    # - 6144
+    # - 8192
+    - 20480
+    # - 40960
+    # - 61440
 
-  learning_rate: 6.103515625e-05
 
+  ^exp_learning_rate: 
+    # - 14
+    - 15
+    # - 16
 
   checkpoint:
    load:
+    type: huggingface
+    path: "meta-llama/Llama-3.2-1B"
+   save:
     type: nano
     path: null #change
-   save:
-    type: huggingface
-    path: null #change
-  
+
 
 infrastructure:
   metric_logger:
-    name: Llame_PC
+    name: Llame_TA
     tags:
       - nano
       - pc
       - llama_1
+      - TA
 
   slurm:
+    job-name: ${infrastructure.metric_logger.name}
     gres: gpu:4
-
+    time: "2-00:00:00"
