--- a/configs/pc_project/llama_8B_comp.yaml
+++ b/configs/pc_project/llama_8B_comp.yaml
@@ -1,13 +1,10 @@
-
 defaults:
-  # - _cluster@_here_: helios_4
-  - _cluster@_here_: helios_8
-  # - _cluster@_here_: entropy_8
-  - _model/llama@_here_: projected_8B
-  - _trainer@_here_: llama
-  - _dataset@_here_: c4
-  - _checkpoints@_here_: none
-  - _misc@_here_: default
+  - ../_cluster@_here_: entropy
+  - ../_model/llama@_here_: projected_8B
+  - ../_trainer@_here_: llama
+  - ../_dataset@_here_: fineweb
+  - ../_checkpoints@_here_: none
+  - ../_misc@_here_: default
   
 
 common:
@@ -19,8 +16,7 @@ trainer:
 
   n_steps: 1001
   
-  ^learning_rate: 
-    - 3.814697265625e-06
+  learning_rate: ??? # CHANGE
 
   checkpoint:
     save:
@@ -40,8 +36,8 @@ infrastructure:
     tags:
       - nano
       - pc
-      - llama_8_pc
+      - llama_8
+      - projected_compression
 
-  
   slurm:
     time: "0-01:00:00"
