--- a/configs/plasticity/repeated_wsd.yaml
+++ b/configs/plasticity/repeated_wsd.yaml
@@ -5,13 +5,14 @@ trainer:
   scheduler:
     _partial_: true
     _target_: src.plasticity.schedulers.RepeatedScheduler
+    n_steps: ${trainer.n_steps}
     num_cycles: 3
-    warmup_steps: ${eval:'int(${trainer.n_steps} * 0.1)'}
+    warmup_fraction: 0.1
     base_scheduler_factory:
       _partial_: true
       _target_: src.plasticity.schedulers.WSDScheduler
       decay_fraction: 0.1
-      final_lr_fraction: 0.1
+      final_lr_fraction: 0
 
 infrastructure:
   metric_logger:
