--- a/configs/plasticity/test_standard_wsd.yaml
+++ b/configs/plasticity/test_standard_wsd.yaml
@@ -18,15 +18,15 @@ common:
 
 trainer:
   gradient_accumulation_steps: 1
-  n_steps: 20
+  n_steps: 100
   learning_rate: 1e-3
   scheduler:
     _partial_: true
     _target_: src.plasticity.schedulers.WSDScheduler
     n_steps: ${trainer.n_steps}
-    warmup_fraction: 0.1
+    warmup_fraction: 0.2
     decay_fraction: 0.1
-    final_lr_fraction: 0.1
+    final_lr_fraction: 0
 
 infrastructure:
   metric_logger:
@@ -34,5 +34,6 @@ infrastructure:
     type: neptune
     tags:
       - nano
+      - plasticity
       - remove
       - local_debug
