--- a/configs/plasticity/base_scheduler_comparison.yaml
+++ b/configs/plasticity/base_scheduler_comparison.yaml
@@ -13,7 +13,7 @@ common:
 trainer:
   gradient_accumulation_steps: 2
   n_steps: 10_000
-  ^learning_rate: [2e-3, 5e-3, 1e-2, 2e-2]
+  ^learning_rate: [5e-4, 1e-3, 2e-3, 5e-3, 1e-2, 2e-2]
 
 infrastructure:
   metric_logger:
