--- a/configs/plasticity/repeated_long_cosine.yaml
+++ b/configs/plasticity/repeated_long_cosine.yaml
@@ -2,6 +2,7 @@ defaults:
   - base_scheduler_comparison
 
 trainer:
+  n_steps: 11_000
   scheduler:
     _partial_: true
     _target_: src.plasticity.schedulers.RepeatedScheduler
@@ -10,11 +11,9 @@ trainer:
     warmup_fraction: 0.01
     base_scheduler_factory:
       _partial_: true
-      _target_: src.plasticity.schedulers.WSDScheduler
-      warmup_steps: 1
-      decay_fraction: 0.1
-      final_lr_fraction: 0
+      _target_: src.plasticity.schedulers.CosineScheduler
+      final_lr_fraction: 0.1
 
 infrastructure:
   metric_logger:
-    name: Plasticity_Repeated_WSD
+    name: Plasticity_Repeated_Long_Cosine
