remote eval from config

--- a/configs/plasticity/tiny_local.yaml
+++ b/configs/plasticity/tiny_local.yaml
@@ -39,7 +39,15 @@ infrastructure:
       - local
 
   # slurm:
-  #   gres: gpu:1
+    # gres: gpu:1
   #   time: "01:00:00"
 
-do_eval: true
+eval:
+  do_eval: true
+  checkpoint_path: ${trainer.checkpoint.save.path}
+  tasks:
+    - wikitext
+    - piqa
+  limit: 3
+  device: cpu
+
